# dtu_mlops_git_own

./: README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt  tasks.py  train.dockerfile
.dvc/: config
.github/workflows/: tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/dtu_mlops_git_own/: model.py  train.py
tests/: test_data.py  test_model.py
